# fintics

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  TEST_PYPI_GUIDE.md  dev.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
fintics/: __init__.py  cli.py  strategy_template.py
fintics/ai/: __init__.py  util.py
fintics/ai/dataset/: __init__.py  dataset.py  feature_selector.py  normalizer.py
fintics/ai/model/: __init__.py  lgbm.py  prophet.py
fintics/backtest/: __init__.py  backtest.py  optimizer.py  plot.py  real_backtest.py  util.py
fintics/data/: data.py
fintics/indicator/: __init__.py  indicator.py
fintics/strategy/: __init__.py  orderprice.py  strategy.py
fintics/strategy/built_in/: AoStrategy.py  ApoCrossoverStrategy.py  AroonCrossoverStrategy.py  AroonStrategy.py  AtrChangeStrategy.py  AtrCrossoverStrategy.py  BollingerBandsStrategy.py  BopStrategy.py  CciStrategy.py  CmoStrategy.py  CorrelationCrossoverStrategy.py  CorrelationMaCrossoverStrategy.py  DmiStrategy.py  GarmanKlassStrategy.py  HeikinAshiStrategy.py  HistoricalVolatilityStrategy.py  IchimokuCloudStrategy.py  KalmanFilterChangeStrategy.py  KalmanFilterCrossoverStrategy.py  MacdCustomStrategy.py  MacdStrategy.py  MamaStrategy.py  MfiStrategy.py  MidpointStrategy.py  MlCrossoverStrategy.py  MlStrategy.py  MomentumCrossoverStrategy.py  MomentumStrategy.py  MovingAverageCrossoverStrategy.py  MovingAverageDifferenceStrategy.py  ParabolicSarStrategy.py  PpoStrategy.py  RciStrategy.py  RsiCrossoverStrategy.py  RsiReversalStrategy.py  RsiStrategy.py  SmoothedAtrCrossoverStrategy.py  StochasticReversalStrategy.py  StochasticStrategy.py  SuperTrendStrategy.py  (+9 more)
tests/: conftest.py  test_ai.py  test_backtest.py  test_basic.py  test_data.py  test_indicator.py  test_minimal.py  test_strategy.py
